modified Company Details and Application List pages

--- a/WebApp/Views/Application/Index.cshtml
+++ b/WebApp/Views/Application/Index.cshtml
@@ -72,13 +72,11 @@
                             @if (isAdministrative || isRecruiter)
                             {
                                 <!-- Applicant details -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">@Html.DisplayNameFor(model => model.First().Applicant)</th>
-                                <!-- Applicant's address -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">@Html.DisplayNameFor(model => model.First().Applicant.Address)</th>
-                                <!-- Applicant's program | FILTER -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
+                                <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">ID NO.</th>
+                                <th class="py-3 text-xs font-medium uppercase tracking-wider text-gray-500">@Html.DisplayNameFor(model => model.First().Applicant)</th>
+                                <th class="px-2 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
                                     <div class="dropdown relative">
-                                        <a class="cursor-pointer text-black" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <a class="cursor-pointer href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             @if (string.IsNullOrEmpty(filterByProgram))
                                             {
                                                 @Html.DisplayNameFor(model => model.First().Applicant.EducationalDetail.Program)
@@ -89,6 +87,7 @@
                                             }
                                             <i class="fa-solid fa-chevron-down"></i>
                                         </a>
+
                                         <div class="dropdown-menu absolute hidden max-h-[200px] space-y-2 overflow-y-auto pt-1 text-gray-700" aria-labelledby="statusTypeDropdown">
                                             <a class="dropdown-item block px-4 text-sm hover:bg-gray-100"
                                                asp-action="@aspAction"
@@ -124,32 +123,32 @@
                                     </div>
                                 </th>
 
-                                <!-- Job title | SORT -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
+                                <!-- Job title/Position | SORT -->
+                                <th class="pl-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-600">
                                     <a asp-action="@aspAction"
                                        asp-route-sortBy="@sortByTitle"
                                        asp-route-search="@search"
                                        asp-route-programFilter="@filterByProgram"
                                        asp-route-workSetupFilter="@filterByWorkSetup"
                                        asp-route-statusFilter="@filterByStatus"
-                                       class="text-gray-900">
-                                        Job Title
+                                       class="text-gray-500">
+                                        Position
                                         @(sortBy == "title_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "title_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
                                     </a>
                                 </th>
                                 if (isAdministrative){
                                     <!-- Company details -->
-                                    <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">@Html.DisplayNameFor(model => model.First().Job.Company)</th>
+                                    <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-600">@Html.DisplayNameFor(model => model.First().Job.Company)</th>
                                 }
                                 <!-- Job location -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">@Html.DisplayNameFor(model => model.First().Job.Location)</th>
+                                <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">@Html.DisplayNameFor(model => model.First().Job.Location)</th>
                                 <!-- Setup type | FILTER -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
+                                <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
                                     <div class="dropdown relative">
-                                        <a class="cursor-pointer text-black" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <a class="cursor-pointer text-gray-500" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             @if (string.IsNullOrEmpty(filterByWorkSetup))
                                             {
-                                                <text>Work Setup</text>
+                                                <text>Setup</text>
                                             }
                                             else
                                             {
@@ -181,28 +180,30 @@
                                         </div>
                                     </div>
                                 </th>
+
                                 <!-- Application date | SORT -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
+                                <th class="pl-2 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
                                     <a asp-action="@aspAction"
                                        asp-route-sortBy="@sortByCreatedDate"
                                        asp-route-search="@search"
                                        asp-route-programFilter="@filterByProgram"
                                        asp-route-workSetupFilter="@filterByWorkSetup"
                                        asp-route-statusFilter="@filterByStatus"
-                                       class="text-gray-900">
+                                       class="text-gray-500">
                                         @Html.DisplayNameFor(model => model.First().CreatedDate)
                                         @(sortBy == "created_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "created_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
                                     </a>
                                 </th>
+
                                 if (isRecruiter)
                                 {
-                                    <!-- Applicant Resume -->
-                                    <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">@Html.DisplayNameFor(model => model.First().Applicant.Resume)</th>
+                                <!-- Applicant Resume -->
+                                <th class="py-3 text-xs font-medium uppercase tracking-wider text-gray-500">@Html.DisplayNameFor(model => model.First().Applicant.Resume)</th>
                                 }
                                 <!-- Application Status | FILTER -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
+                                <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-500">
                                     <div class="dropdown relative">
-                                        <a class="cursor-pointer text-black" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <a class="cursor-pointer text-gray-500" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             @if (string.IsNullOrEmpty(filterByStatus))
                                             {
                                                 <text>Status</text>
@@ -249,7 +250,7 @@
                                        asp-route-workSetupFilter="@filterByWorkSetup"
                                        asp-route-statusFilter="@filterByStatus"
                                        class="text-gray-900">
-                                        Job Title
+                                        POSITION
                                         @(sortBy == "title_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "title_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
                                     </a>
                                 </th>
@@ -296,7 +297,7 @@
                                     </div>
                                 </th>
                                 <!-- Application date | SORT -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
+                                <th class="px-3 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
                                     <a asp-action="@aspAction"
                                        asp-route-sortBy="@sortByCreatedDate"
                                        asp-route-search="@search"
@@ -309,7 +310,7 @@
                                     </a>
                                 </th>
                                 <!-- Application Status | FILTER -->
-                                <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
+                                <th class="pl-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
                                     <div class="dropdown relative">
                                         <a class="cursor-pointer text-black" href="#" id="statusTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             @if (string.IsNullOrEmpty(filterByStatus))
@@ -378,39 +379,60 @@
                                 var job = item.Job;
                                 var jobSetup = job.SetupType;
                                 var applicationStatus = item.ApplicationStatusType;
-                                var applicationDate = $"{item.CreatedDate.ToString("MM/dd/yyyy")}\n{item.CreatedDate.ToString("hh:mm tt")}";
+                                var applicationDate = $"{item.CreatedDate.ToString("MM/dd/yyyy")} {item.CreatedDate.ToString("hh:mm tt")}";
 
                                 <tr class="hover:bg-gray-100">
                                     @if (isAdministrative || isRecruiter)
                                     {
-                                        <!-- Applicant details | FILTER -->
-                                        <td class="px-6 py-3 text-sm text-gray-700">
-                                            @Html.Raw(applicantDetails.Replace("\n", "<br>"))
+                                        <td class="w-24 pl-3 py-3 text-sm text-gray-700">
+                                           <div class="font-medium text-[#7A1515] text-xs">@applicantEducation.IdNumber</div>
                                         </td>
-                                        <!-- Applicant's address | FILTER -->
-                                        <td class="px-6 py-3 text-sm text-gray-700">@applicant.Address</td>
+
+                                        <!-- Applicant details | FILTER -->
+                                        <td class="w-24 pr-3 py-3 text-sm text-gray-700">
+                                            <div>
+                                                <a href="@Url.Action("GetApplication", "Application", 
+                                                           new { 
+                                                                 id = item.ApplicationId, 
+                                                                  sortBy = sortBy, 
+                                                                  search = search, 
+                                                                  pageIndex = Model.PageIndex, 
+                                                                  filterByWorkSetup = filterByWorkSetup, 
+                                                                  filterByProgram = filterByProgram, 
+                                                                  filterByStatus = filterByStatus 
+                                                                })"
+                                                   class="font-semibold text-[#7A1515] text-sm hover:underline hover:text-[#A53D3D]">
+                                                    @item.ApplicantName
+                                                </a>
+                                                <div class="text-xs">@applicantUser.Email</div>
+                                                <div class="text-xs">@applicant.Address</div>
+                                            </div>
+                                        </td>
+
                                         <!-- Applicant's program | FILTER -->
-                                        <td class="cursor-pointer px-6 py-3 text-sm text-gray-700" title="@applicantProgram.Name">@applicantProgram.ShortName</td>
+                                        <td class="cursor-pointer w-24 px-2 py-3 text-xs text-gray-700" title="@applicantProgram.Name">
+                                            @applicantProgram.ProgramId
+                                        </td>
                                         <!-- Job title | FILTER -->
-                                        <td class="px-6 py-3 text-sm text-gray-700">@item.Job.Title</td>
+                                        <td class="w-24 px-3 py-3 text-xs text-gray-700">@item.Job.Title</td>
                                         if (isAdministrative)
                                         {
-                                            <!-- Company details | FILTER -->
-                                            <td class="px-6 py-3 text-sm text-gray-700">@Html.Raw(companyDetails.Replace("\n", "<br>"))</td>
+                                             <!-- Company details | FILTER -->
+                                            <td class="px-6 py-3 text-xs text-gray-700">@Html.Raw(companyDetails.Replace("\n", "<br>"))</td>
                                         }
                                         <!-- Job location | FILTER -->
-                                        <td class="px-6 py-3 text-sm text-gray-700">@job.Location</td>
+                                        <td class="w-24 px-3 py-3 text-xs text-gray-700">@job.Location</td>
                                         <!-- Setup type | FILTER -->
-                                        <td class="px-6 py-3 text-sm text-gray-700">@jobSetup.Name</td>
+                                        <td class="w-24 px-3 py-3 text-xs text-gray-700">@jobSetup.Name</td>
                                         <!-- Application date | SORT -->
-                                        <td class="px-6 py-3 text-sm text-gray-700">@Html.Raw(applicationDate.Replace("\n", "<br>"))</td>
+                                        <td class="w-30 pl-2 py-3 text-xs text-gray-700">@Html.Raw(applicationDate.Replace("\n", "<br>"))</td>
                                         if (isRecruiter)
                                         {
-                                            <!-- Applicant Resume | SORT -->
-                                            <td class="px-6 py-3 text-sm font-semibold text-gray-700"><a href="#">View Resume</a></td>
+                                        <!-- Applicant Resume | SORT -->
+                                        <td class="w-24 py-3 text-xs font-semibold"><a href="# text-[#7A1515] hover:underline hover:text-[#A53D3D]">View Resume</a></td>
                                         }
                                         <!-- Application Status | FILTER -->
-                                        <td class="px-6 py-3 text-sm text-gray-700">@item.ApplicationStatusType.Name</td>
+                                        <td class="w-24 px-3 py-3 text-xs text-gray-700">@item.ApplicationStatusType.Name</td>
                                     }
                                     else
                                     {
