Edit User Profile and upload avatar

--- a/WebApp/Views/Shared/_Header.cshtml
+++ b/WebApp/Views/Shared/_Header.cshtml
@@ -52,6 +52,10 @@
                             <a href="@Url.Action("GetUserPreferences", "UserPreferences")" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
                                 <i class="fa fa-cog mr-2"></i> Settings
                             </a>
+                            <a href="@Url.Action("GetLoggedInUser", "Account")" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
+                                <i class="fa fa-user mr-2"></i> Profile Details
+                            </a>
+
                             <a href="#" data-toggle="modal" data-target="#logoutModal" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">
                                 <i class="fa fa-sign-out mr-2"></i> Log out
                             </a>
