--- a/WebApp/Views/Application/Index.cshtml
+++ b/WebApp/Views/Application/Index.cshtml
@@ -5,7 +5,7 @@
 @using Humanizer
 
 @{
-    ViewData["Title"] = "Application List";
+    ViewData["Title"] = "Applications | GradSync";
 
     string search = ViewData["Search"] as string;
     string sortBy = ViewData["SortBy"] as string;
