--- a/WebApp/Views/Company/RegisterCompany.cshtml
+++ b/WebApp/Views/Company/RegisterCompany.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Services.ServiceModels.CompanyViewModel
 
 @{
-    ViewData["Title"] = "Register Company";
+    ViewData["Title"] = "Register Company | GradSync";
 }
 
 <div class="min-h-screen bg-[#F5F7F8]">
