--- a/WebApp/Views/Company/ViewCompany.cshtml
+++ b/WebApp/Views/Company/ViewCompany.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Services.ServiceModels.CompanyViewModel
 
 @{
-    ViewData["Title"] = $"Company | {Model.Name}";
+    ViewData["Title"] = $"{Model.Name} | GradSync";
     var aspAction = "GetAllCompanies";
 
     // await Html.RenderPartialAsync("_AddRecruiterModal", Model);
