--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- Applicant Homepage -->
 @model List<Services.ServiceModels.JobViewModel>
 @{
-    ViewData["Title"] = "GradSync - Home";
+    ViewData["Title"] = "GradSync";
 }
 
 <div class="mt-12 min-h-screen bg-[#F1F2F4]">
