--- a/WebApp/Views/Job/IndexApplicant.cshtml
+++ b/WebApp/Views/Job/IndexApplicant.cshtml
@@ -3,7 +3,7 @@
 @using Humanizer;
 
 @{
-    ViewData["Title"] = "Available Jobs";
+    ViewData["Title"] = "Available Jobs | GradSync";
 
     string GetEmploymentTypeColor(string employmentType)
     {
