--- a/WebApp/Views/UserPreferences/ViewPreferences.cshtml
+++ b/WebApp/Views/UserPreferences/ViewPreferences.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Services.ServiceModels.UserPreferencesViewModel
 
 @{
-    ViewData["Title"] = "Settings";
+    ViewData["Title"] = "Settings | GradSync";
 }
 
 <div class="flex min-h-screen items-center justify-center bg-[#F5F7F8]">
