--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -4,7 +4,7 @@
 @using System.Text.Json;
 
 @{
-    ViewData["Title"] = Model.Title;
+    ViewData["Title"] = $"{Model.Title} | GradSync";
     var userId = ViewBag.UserId;
     string aspAction = string.Empty;
 
@@ -40,20 +40,20 @@
                         {
                             <!-- Save -->
                             <button onclick="saveJobHandler('@Model.JobId')"
-                                    class="flex items-center justify-center rounded-lg px-4 py-2 transition-all bg-[#7A1515] hover:bg-[#991b1b] text-white">
+                                    class="flex items-center justify-center rounded-lg bg-[#7A1515] px-4 py-2 text-white transition-all hover:bg-[#991b1b]">
                                 <i class="fa-regular fa-bookmark"></i>
                             </button>
 
                             <!-- Apply -->
                             <button onclick="applyJobHandler('@Model.JobId')"
-                                    class="flex items-center justify-center rounded-lg px-4 py-2 transition-all bg-[#7A1515] hover:bg-[#991b1b] text-white">
+                                    class="flex items-center justify-center rounded-lg bg-[#7A1515] px-4 py-2 text-white transition-all hover:bg-[#991b1b]">
                                 <i class="fa-regular fa-paper-plane pr-1"></i> Apply
                             </button>
                         }
                         else if (User.IsInRole("Recruiter") && string.Equals(userId, Model.PostedById))
                         {
                             <!-- Edit -->
-                            <button class="flex items-center justify-center rounded-lg px-4 py-2 transition-all bg-[#7A1515] hover:bg-[#991b1b] text-white"
+                            <button class="flex items-center justify-center rounded-lg bg-[#7A1515] px-4 py-2 text-white transition-all hover:bg-[#991b1b]"
                                     data-toggle="modal"
                                     data-target="#editJobModal">
                                 <i class="fas fa-edit pr-2"></i> Edit
