--- a/WebApp/Views/User/Index.cshtml
+++ b/WebApp/Views/User/Index.cshtml
@@ -2,7 +2,7 @@
 @using Humanizer
 
 @{
-    ViewData["Title"] = "All Users";
+    ViewData["Title"] = "User Management | GradSync";
     await Html.RenderPartialAsync("_AddUserModal", new Services.ServiceModels.UserViewModel());
     await Html.RenderPartialAsync("_ResetPasswordModal");
     await Html.RenderPartialAsync("_DeleteModal");
@@ -99,9 +99,9 @@
                                 </th>
 
                                 <!-- Verified Dropdown Filter -->
-                                <th class="pl-6 py-3 text-left text-sm font-medium uppercase tracking-wider text-gray-500">
+                                <th class="py-3 pl-6 text-left text-sm font-medium uppercase tracking-wider text-gray-500">
                                     <div class="relative">
-                                        <button class="cursor-pointer uppercase pl-6 text-black hover:text-[#A53D3D]" id="verifiedDropdown">
+                                        <button class="cursor-pointer pl-6 uppercase text-black hover:text-[#A53D3D]" id="verifiedDropdown">
                                             Verified <i class="fas fa-chevron-down"></i>
                                         </button>
 
@@ -147,15 +147,15 @@
                                 {
                                     await Html.RenderPartialAsync("_EditUserModal", item);
                                     <tr class="hover:bg-gray-100">
-                                        <td class="px-6 py-3 whitespace-nowrap text-sm text-gray-900">
+                                        <td class="whitespace-nowrap px-6 py-3 text-sm text-gray-900">
                                             <div class="flex items-center">
-                                                <img src="https://ui-avatars.com/api/?name=@item.FirstName+@item.LastName" alt="Profile Image" class="h-8 w-8 rounded-full mr-3">
+                                                <img src="https://ui-avatars.com/api/?name=@item.FirstName+@item.LastName" alt="Profile Image" class="mr-3 h-8 w-8 rounded-full">
                                                 @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
                                             </div>
                                         </td>
                                         <td class="px-6 py-3 text-sm text-gray-500">@Html.DisplayFor(modelItem => item.Email)</td>
                                         <td class="px-6 py-3 text-sm text-gray-500">@Html.DisplayFor(modelItem => item.RoleId)</td>
-                                        <td class="pl-12 py-3 text-sm text-left">
+                                        <td class="py-3 pl-12 text-left text-sm">
                                             @if (item.IsVerified)
                                             {
                                                 <span class="text-green-600">
@@ -170,9 +170,9 @@
                                             }
                                         </td>
 
-                                        <td class="pl-6 py-3 text-left">
+                                        <td class="py-3 pl-6 text-left">
                                             <div class="relative">
-                                                <button data-userid="@item.UserId" class="actionDropdownBtn cursor-pointer text-black hover:text-[#A53D3D] focus:outline-none px-6">
+                                                <button data-userid="@item.UserId" class="actionDropdownBtn cursor-pointer px-6 text-black hover:text-[#A53D3D] focus:outline-none">
                                                     <i class="fas fa-ellipsis-v"></i>
                                                 </button>
 
